--- a/templates/dissertations_welcome.html
+++ b/templates/dissertations_welcome.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
   <li class="active">{% trans 'Dissertations' %}</li>
 {% endblock %}
 {% block content %}
@@ -37,7 +37,7 @@
   <div class="jumbotron">
     <h2>{% trans 'Welcome' %}</h2>
         <p>
-           {% trans 'This application is dedicated to student\'s dissertations management, for the Faculties which choosed to use it.' %}
+           {% trans "This application is dedicated to student's dissertations management, for the Faculties which choosed to use it." %}
         </p>
         <p>
            {% trans 'If you continue, you will be registered as teacher in the application, and you will be able to create dissertation subjects for the students.' %}
