--- a/templates/manager_dissertations_add_justification.html
+++ b/templates/manager_dissertations_add_justification.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
   <li><a href="{% url 'manager_dissertations_list' %}" id="lnk_dissertations_list">{% trans 'Dissertations' %}</a></li>
   <li><a href="{% url 'manager_dissertations_detail' pk=dissert.pk %}"
