--- a/templates/dissertations_detail.html
+++ b/templates/dissertations_detail.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-<li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
+<li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
 <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
 <li><a href="{% url 'dissertations_list' %}" id="lnk_propositions">{% trans 'Dissertations' %}</a></li>
 <li class="active">{{ dissertation.title|truncatechars:24 }}</li>
