--- a/templates/manager_dissertations_wait_list.html
+++ b/templates/manager_dissertations_wait_list.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
   <li class="active">{% trans 'Dissertations' %}</li>
 {% endblock %}
