--- a/templates/manager_information_add_person.html
+++ b/templates/manager_information_add_person.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
   <li><a href="{% url 'manager_informations' %}" id="lnk_manager_informations">{% trans 'Teachers' %}</a></li>
   <li class="active">{% trans 'Add person' %}</li>
