--- a/templates/proposition_dissertations_jury_edit.html
+++ b/templates/proposition_dissertations_jury_edit.html
@@ -27,7 +27,7 @@
 {% endcomment %}
 
 {% block breadcrumb %}
-  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans 'Students\' path' %}</a></li>
+  <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
   <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
   <li><a href="{% url 'proposition_dissertations' %}" id="lnk_proposition_dissertations">{% trans 'Dissertation subjects' %}</a></li>
   <li class="active">{% trans 'Add/Edit jury member for the dissertation subject' %}</li>
