OSIS-2367 fin du refactoring des translates, il reste que les enums

--- a/templates/informations_detail_stats.html
+++ b/templates/informations_detail_stats.html
@@ -211,7 +211,7 @@
             options: {
                 title: {
                     display: true,
-                    options: '{% trans 'Chart as copromotor'  %}'
+                    options: '{% trans 'Chart as promotor'  %}'
                         }
                       }
 
