--- a/templates/manager_informations_detail_stats.html
+++ b/templates/manager_informations_detail_stats.html
@@ -218,7 +218,7 @@
             options: {
                 title: {
                     display: true,
-                    options: '{% trans 'Chart as copromotor'  %}'
+                    options: '{% trans 'Chart as promotor'  %}'
                         }
                       }
 
