OSIS-2367 modification de cas particulier dans les traductions en cours

--- a/templates/informations_detail_stats.html
+++ b/templates/informations_detail_stats.html
@@ -76,7 +76,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6" style="text-align: right">
-                            <label>{% trans 'Dissertation quantity as copromotor' %}</label>
+                            <label>{% trans 'Dissertations quantity as copromotor' %}</label>
                         </div>
                         <div class="col-md-6">
                             {{ count_advisers_copro }}
@@ -84,7 +84,7 @@
                     </div>
                     <div class="row">
                         <div class="col-md-6" style="text-align: right">
-                            <label>{% trans 'Dissertation quantity as reader' %}</label>
+                            <label>{% trans 'Dissertations quantity as reader' %}</label>
                         </div>
                         <div class="col-md-6">
                             {{ count_advisers_reader }}
