--- a/templates/dissertations_detail_updates.html
+++ b/templates/dissertations_detail_updates.html
@@ -31,7 +31,7 @@
 {% block breadcrumb %}
 <li><a href="{% url 'studies' %}" id="lnk_studies">{% trans "Students' path" %}</a></li>
 <li><a href="{% url 'dissertations' %}" id="lnk_dissertations">{% trans 'Dissertations' %}</a></li>
-<li><a href="{% url 'dissertations_list' %}" id="lnk_propositions">{% trans 'Dissertationss' %}</a></li>
+<li><a href="{% url 'dissertations_list' %}" id="lnk_propositions">{% trans 'Dissertations' %}</a></li>
 <li class="active">{{ dissertation.title|truncatechars:24 }}</li>
 {% endblock %}
 {% block content %}
