OD-8 Fin du refactoring des traductions

--- a/templates/manager_informations_list.html
+++ b/templates/manager_informations_list.html
@@ -58,7 +58,7 @@
                 <thead>
                     <tr>
                         <th>{% trans 'Teacher' %}</th>
-                        <th>{% trans 'How many active dissetations (all programs)' %}</th>
+                        <th>{% trans 'How many active dissertations (all programs)' %}</th>
                         <th>{% trans 'How many dissertations as promotor' %}</th>
                         <th>{% trans 'How many dissertations as copromotor' %}</th>
                         <th>{% trans 'How many dissertations as reader' %}</th>
