--- a/templates/manager_dissertations_list.html
+++ b/templates/manager_dissertations_list.html
@@ -191,7 +191,7 @@
                 <td>{{ dissertation.offer_year_start.acronym }}</td>
                 <td>{{ dissertation.offer_year_start.academic_year }}</td>
                 <td>{{ dissertation.proposition_dissertation }}</td>
-                <td>                   {git% if dissertation.status == 'DRAFT' %}
+                <td>{% if dissertation.status == 'DRAFT' %}
                     <span class="label label-default">
                     {% elif dissertation.status == 'DIR_SUBMIT' %}
                     <span class="label label-primary">
