OD-8 fin des corrections des bugs de fonctionalité et test complet de l'appli pour les translations

--- a/templates/dissertations_list.html
+++ b/templates/dissertations_list.html
@@ -87,7 +87,7 @@
       {% if adviser_list_dissertations_copro %}
           <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title">{% trans 'Dissertations as co⁻promotor' %}</h3>
+                <h3 class="panel-title">{% trans 'Dissertations as co-promotor' %}</h3>
             </div>
               <table class="table table-hover">
                 <tr>
