--- a/templates/manager_informations_list.html
+++ b/templates/manager_informations_list.html
@@ -41,7 +41,7 @@
   </div>
   <ul class="nav nav-tabs">
     <li class="active"><a href={% url 'manager_informations' %}>{% trans 'All teachers' %}</a></li>
-    <li><a href="{% url 'manager_informations_list_request' %}">{% trans 'Teacher having to answer request' %}</a></li>
+    <li><a href="{% url 'manager_informations_list_request' %}">{% trans 'Teachers having to answer request' %}</a></li>
   </ul>
   <div class="panel panel-default">
     <div class="panel-body">
