--- a/templates/manager_informations_list_request.html
+++ b/templates/manager_informations_list_request.html
@@ -37,7 +37,7 @@
   </div>
   <ul class="nav nav-tabs">
     <li><a href={% url 'manager_informations' %}>{% trans 'All teachers' %}</a></li>
-    <li class="active"><a href="{% url 'manager_informations_list_request' %}">{% trans 'Teacher having to answer request' %}</a></li>
+    <li class="active"><a href="{% url 'manager_informations_list_request' %}">{% trans 'Teachers having to answer request' %}</a></li>
   </ul>
   <div class="panel panel-default">
       <table class="table table-hover">
