OD-39 modification des templates en rapport avec OSIS-1666

--- a/templates/manager_dissertations_wait_commission_list.html
+++ b/templates/manager_dissertations_wait_commission_list.html
@@ -216,8 +216,8 @@
                 },
                 {"data":"author"},
                 {"data":"status"},
-                {"data":"offer_year"},
-                {"data":"offer"},
+                {"data":"education_group_year"},
+                {"data":"education_groups"},
                 {"data":"proposition_dissertation"},
                 {
                     "orderable":false,
