--- a/templates/manager_proposition_dissertations_list.html
+++ b/templates/manager_proposition_dissertations_list.html
@@ -88,12 +88,11 @@
                       {% endif %}
                   </td>
                   <td>
-                      {% for prop_offer in proposition_dissertation.propositionoffer_set.all %}
-                        {% if forloop.last %}
-                            {{ prop_offer.offer_proposition.acronym }}
-                        {% else %}
-                            {{ prop_offer.offer_proposition.acronym }} -
-                        {% endif %}
+                      {% for prop_diss_education_group in proposition_dissertation.topiceducationgroup_set.all %}
+                        {{ prop_diss_education_group.education_group.most_recent_acronym }}
+                          {% if not forloop.last %}
+                          -
+                          {% endif %}
                       {% endfor %}
                   </td>
                 </tr>
